--- a/_posts/2016-05-31-OS-Search.md
+++ b/_posts/2016-05-31-OS-Search.md
@@ -5,22 +5,25 @@ categories: [blog ]
 tags: [Tool ]
 description: Tools 的断舍离
 ---
-### *这两天跟着 Azeril 老师，学了很多好用的工具，现在写个小指南*
+### 这两天跟着 Azeril 老师，学了很多好用的工具，现在写个小指南
 
-###1 Google  
-####1.a Search  
+### 1 Google  
+#### 1.a Search  
+
   + 搜索限定符  
-     * " " ——完全匹配 
+     * " " ——完全匹配  
+      
      * \* ——模糊搜索  
-     🍐「生活的*」(生活的艺术）  
-     * - ——排除  
+     🍐「生活的*」(生活的艺术） 
+      
+     * \- ——排除  
      🍐“the beauty” – “united states”  
+       
   + 站内搜索  
   🍐site:zhihu.com 手电筒
   
   + 类别搜索  
-  filetype:pdf/word/ppt/jpg/gif/mobi/epub + keyword  
-  🍐filetype:pdf 论语  
+  filetype:pdf/word/ppt/jpg/gif/mobi/epub + keyword   
   
   + 多重搜索  
   「白色 or 黑色」 not 「白色 黑色」
@@ -28,17 +31,27 @@ description: Tools 的断舍离
 
 
 
-####1.b Chrome  
+#### 1.b Chrome  
+ 
   + shortcut key  
      * command+N 打开新窗口  
+     
      * command+T 打开新标签页  
-     * command+shift+N 隐身模式打开新窗口  
-     * command+W 关闭标签   
+     
+     * command+shift+N 隐身模式打开新窗口 
+      
+     * command+W 关闭标签  
+      
      * command+shift+T 重新打开刚关闭标签  
-     * command+shift+B 隐藏书签栏  
-     * command+shift+delete 快速清空浏览数据  
+      
+     * command+shift+B 隐藏书签栏   
+     
+     * command+shift+delete 快速清空浏览数据   
+     
      * command+(+/-) 放大缩小网页字体  
+     
      * command+0 重置为原页面大小  
+     
      * control+tab 切换标签页
   
   * Extensions  
@@ -58,7 +71,7 @@ description: Tools 的断舍离
      * [Markdown Here](https://chrome.google.com/webstore/detail/markdown-here/elifhakcjgalahccnjkneoccemfahfoa) 渲染 Markdown 文本为 html 文本，nice!  
      * [Copy as Markdown](https://chrome.google.com/webstore/detail/copy-as-markdown/fkeaekngjflipcockcnpobkpbbfbhmdn) 把网址、图片转为 Markdown 格式富文本，nice!
 
-###2 Others Tools
+### 2 Others Tools
 
 + **iTerm** 一直用的终端，等学命令行的时候安装试试
 + **Sublime Text** 之前用的 TextWrangler, 看在它小清新的份上暂时不删  
