--- a/_posts/2016-05-31-OS-Search.md
+++ b/_posts/2016-05-31-OS-Search.md
@@ -5,11 +5,12 @@ categories: [blog ]
 tags: [Tool ]
 description: Tools 的断舍离
 ---
-## 这两天跟着 Azeril 老师，学了很多好用的工具，现在写个小指南
+## 这两天跟着 Azeril 老师，学了很多好用的工具，现在写个小指南  
 
-## 1 Google   
 
-### 1.a Search  
+### 1 Google   
+
+1.a Search  
 
   + 搜索限定符  
      * " " ——完全匹配  
@@ -32,7 +33,7 @@ description: Tools 的断舍离
 
 
 
-### 1.b Chrome  
+1.b Chrome  
  
   + shortcut key  
      * command+N 打开新窗口  
@@ -72,7 +73,7 @@ description: Tools 的断舍离
      * [Markdown Here](https://chrome.google.com/webstore/detail/markdown-here/elifhakcjgalahccnjkneoccemfahfoa) 渲染 Markdown 文本为 html 文本，nice!  
      * [Copy as Markdown](https://chrome.google.com/webstore/detail/copy-as-markdown/fkeaekngjflipcockcnpobkpbbfbhmdn) 把网址、图片转为 Markdown 格式富文本，nice!
 
-## 2 Others Tools
+### 2 Others Tools
 
 + **iTerm** 一直用的终端，等学命令行的时候安装试试
 + **Sublime Text** 之前用的 TextWrangler, 看在它小清新的份上暂时不删  
