--- a/_posts/2016-05-31-OS-Search.md
+++ b/_posts/2016-05-31-OS-Search.md
@@ -8,7 +8,7 @@ description: Tools 的断舍离
 
 
 
-###这两天跟着 Azeril 老师，学了很多好用的工具，现在写个小指南  
+### 这两天学了些好用的工具，现在写个小指南  
 ---
 
 ### 1 Google   
@@ -16,7 +16,7 @@ description: Tools 的断舍离
 1.a Search  
 
   + 搜索限定符  
-     * " " ——完全匹配  
+     * “ ” ——完全匹配  
       
      * \* ——模糊搜索  
      🍐「生活的*」(生活的艺术） 
@@ -90,7 +90,6 @@ description: Tools 的断舍离
 + **图片编辑** 除了自带的预览，只安装了sketch，这类工具都不太熟  
 ![](http://o7v1v0rr4.bkt.clouddn.com/%E5%9B%BE%E7%89%87%E5%A4%84%E7%90%86%E5%B7%A5%E5%85%B7.png)
 + **Homebrew** 这个有点高端啊，套件管理工具，以后安装软件包先试试这个  
- ![](http://o7v1v0rr4.bkt.clouddn.com/Homwbrew%E5%BA%94%E7%94%A8.png)  
 + **Markdown 编辑器**
   - 桌面版
      * Macdown
