--- a/_posts/2016-05-31-OS-Search.md
+++ b/_posts/2016-05-31-OS-Search.md
@@ -2,7 +2,7 @@
 layout: post
 title: OS & Search 小指南
 categories: [blog ]
-tags: [Tool ]
+tags: [Tools ]
 description: Tools 的断舍离
 ---
 
@@ -13,7 +13,7 @@ description: Tools 的断舍离
 
 ### 1 Google   
 
-1.a Search  
+**1.a Search**  
 
   + 搜索限定符  
      * “ ” ——完全匹配  
@@ -36,7 +36,7 @@ description: Tools 的断舍离
 
 
 
-1.b Chrome  
+**1.b Chrome**  
  
   + shortcut key  
      * command+N 打开新窗口  
@@ -66,7 +66,7 @@ description: Tools 的断舍离
      * [One key Manager](https://chrome.google.com/webstore/detail/%E4%B8%80%E9%94%AE%E7%AE%A1%E7%90%86/kfjmkgngkgpgjdoealkmmajmmhpnffoj) 和之前用的[一键管理所有扩展](https://chrome.google.com/webstore/detail/%E4%B8%80%E9%94%AE%E7%AE%A1%E7%90%86%E6%89%80%E6%9C%89%E6%89%A9%E5%B1%95/niemebbfnfbjfojajlmnbiikmcpjkkja)属同类应用  
      * [1Password](https://chrome.google.com/webstore/detail/1password-password-manage/aomjjhallfgjeglblehebfpbcfeobpgk?hl) and [LastPass](https://chrome.google.com/webstore/detail/lastpass-free-password-ma/hdokiejnpimakedhajhdlcegeplioahd) 密码管理  
      * [Xmarks Bookmark Sync](https://chrome.google.com/webstore/detail/xmarks-bookmark-sync/ajpgkpeckebdhofmmjfgcjjiiejpodla) 多浏览器同步书签，暂时用不上，先留着~  
-     * [Proxy SwitchyOmega](https://chrome.google.com/webstore/detail/proxy-switchyomega/padekgcemlokbadohgkifijomclgjgif) 代理管理和切换，一直用的 Lanrern, 暂时用不到，先留着~  
+     * [Proxy SwitchyOmega](https://chrome.google.com/webstore/detail/proxy-switchyomega/padekgcemlokbadohgkifijomclgjgif) 代理管理和切换，一直用的 Lantern，暂时用不到，先留着~  
      * [Adblok](https://chrome.google.com/webstore/detail/adblock-plus/cfhdojbkjhnklbpkdaibdccddilifddb) 一直在用  
      * [WikiWand](https://chrome.google.com/webstore/detail/wikiwand-wikipedia-modern/emffkefkbkpkgpdeeooapgaicgmcbolj) 一直在用  
      * [Search by Image](https://chrome.google.com/webstore/detail/search-by-image-by-google/dajedkncpodkggklbegccjpmnglmnflm) 顾名思义，nice！  
