--- a/_posts/2016-6-11-openmind-108.md
+++ b/_posts/2016-6-11-openmind-108.md
@@ -18,7 +18,7 @@ description: 開智正典
 
 * [《基地》](https://book.douban.com/subject/1258490/)
 
-### 进化论
+### Tools 
 
 [《物种起源》](https://book.douban.com/subject/25745879/)
 
