--- a/_posts/2016-6-11-openmind-108.md
+++ b/_posts/2016-6-11-openmind-108.md
@@ -8,15 +8,11 @@ description: 開智正典
 
 ### 智慧在哪里？
 
-[《集异璧》](https://book.douban.com/subject/1291204/)
-
-[《经验的疆界》](https://book.douban.com/subject/6687032/)
-
-[《创新算法》](https://book.douban.com/subject/3354596/)
-
-[《莎士比亚、牛顿和贝多芬》](https://book.douban.com/subject/1037290/)
-
-[《基地》](https://book.douban.com/subject/1258490/)
+[集异璧](https://book.douban.com/subject/1291204/)  
+[经验的疆界](https://book.douban.com/subject/6687032/)  
+[创新算法](https://book.douban.com/subject/3354596/)  
+[莎士比亚、牛顿和贝多芬](https://book.douban.com/subject/1037290/)  
+[基地](https://book.douban.com/subject/1258490/)  
 
 ### 生命从何而来？ 
 
@@ -33,68 +29,36 @@ description: 開智正典
 
 ### 如何认识你自己？
 
-[超越智商](https://book.douban.com/subject/26605978/)
-
-[机器人叛乱](https://book.douban.com/subject/26412113/)
-
-[这才是心理学](https://book.douban.com/subject/26287453/)
-
-[思考，快与慢](https://book.douban.com/subject/10785583/)
-
-[语言本能](https://book.douban.com/subject/26380736/)
-
-[心智探奇](https://book.douban.com/subject/1472347/)
-
-[人性中的善良天使](https://book.douban.com/subject/26150549/)
-
-[奖励的惩罚](https://book.douban.com/subject/1921568/)
-
-[无条件养育](https://book.douban.com/subject/10773248/)
-
-[进化心理学](https://book.douban.com/subject/5422847/)
-
-[追寻记忆的痕迹](https://book.douban.com/subject/1944205/)
-
-[适应性思维](https://book.douban.com/subject/1823961/)
-
-[简捷启发式](https://book.douban.com/subject/1599035/)
-
-[笛卡尔的错误](https://book.douban.com/subject/2157346/)
-
-[Self Comes to Mind](https://book.douban.com/subject/5391560/)
-
-[社会认同过程](https://book.douban.com/subject/5503551/)
-
-[社会表征](https://book.douban.com/subject/5950392/)
-
-[看见成长的自己](https://book.douban.com/subject/6510688/)
-
-[成功，动机与目标](https://book.douban.com/subject/22994632/)
-
-[幸福的真意](https://book.douban.com/subject/3422625/)
-
-[创造力](https://book.douban.com/subject/26285299/)
-
-[失败的逻辑](https://book.douban.com/subject/5417235/)
-
-[为什么学生不喜欢上学?](https://book.douban.com/subject/4864832/)
-
-[象与骑象人](https://book.douban.com/subject/20260640/)
-
-[人格解码](https://book.douban.com/subject/21294724/)
-
-[出类拔萃的IQ](https://book.douban.com/subject/3624729/)
-
-[我们赖以生存的隐喻](https://book.douban.com/subject/26298597/)
-
-[态度改变与社会影响](https://book.douban.com/subject/2328178/)
-
-[持续的幸福](https://book.douban.com/subject/20271917/)
-
-[心灵导论](https://book.douban.com/subject/3012985/)
-
-[对权威的服从](https://book.douban.com/subject/20477116/)
-
-[亲密关系](https://book.douban.com/subject/5952488/)
-
+[超越智商](https://book.douban.com/subject/26605978/)  
+[机器人叛乱](https://book.douban.com/subject/26412113/)  
+[这才是心理学](https://book.douban.com/subject/26287453/)  
+[思考，快与慢](https://book.douban.com/subject/10785583/)  
+[语言本能](https://book.douban.com/subject/26380736/)  
+[心智探奇](https://book.douban.com/subject/1472347/)  
+[人性中的善良天使](https://book.douban.com/subject/26150549/)  
+[奖励的惩罚](https://book.douban.com/subject/1921568/)  
+[无条件养育](https://book.douban.com/subject/10773248/)  
+[进化心理学](https://book.douban.com/subject/5422847/)  
+[追寻记忆的痕迹](https://book.douban.com/subject/1944205/)  
+[适应性思维](https://book.douban.com/subject/1823961/)  
+[简捷启发式](https://book.douban.com/subject/1599035/)  
+[笛卡尔的错误](https://book.douban.com/subject/2157346/)  
+[Self Comes to Mind](https://book.douban.com/subject/5391560/)  
+[社会认同过程](https://book.douban.com/subject/5503551/)  
+[社会表征](https://book.douban.com/subject/5950392/)  
+[看见成长的自己](https://book.douban.com/subject/6510688/)  
+[成功，动机与目标](https://book.douban.com/subject/22994632/)  
+[幸福的真意](https://book.douban.com/subject/3422625/)  
+[创造力](https://book.douban.com/subject/26285299/)  
+[失败的逻辑](https://book.douban.com/subject/5417235/)  
+[为什么学生不喜欢上学?](https://book.douban.com/subject/4864832/)  
+[象与骑象人](https://book.douban.com/subject/20260640/)  
+[人格解码](https://book.douban.com/subject/21294724/)  
+[出类拔萃的IQ](https://book.douban.com/subject/3624729/)  
+[我们赖以生存的隐喻](https://book.douban.com/subject/26298597/)  
+[态度改变与社会影响](https://book.douban.com/subject/2328178/)  
+[持续的幸福](https://book.douban.com/subject/20271917/)  
+[心灵导论](https://book.douban.com/subject/3012985/)  
+[对权威的服从](https://book.douban.com/subject/20477116/)  
+[亲密关系](https://book.douban.com/subject/5952488/)  
 [思维与决策](https://book.douban.com/subject/3542657/)
