--- a/_posts/2016-6-11-openmind-108.md
+++ b/_posts/2016-6-11-openmind-108.md
@@ -6,7 +6,8 @@ tags: [Reading ]
 description: 開智正典
 ---
 
-### 智慧在哪里？
+### 智慧在哪里？  
+**21世纪一个人需要的跨学科通识教育，尽在这里**
 
 [集异璧](https://book.douban.com/subject/1291204/)  
 [经验的疆界](https://book.douban.com/subject/6687032/)  
@@ -14,7 +15,8 @@ description: 開智正典
 [莎士比亚、牛顿和贝多芬](https://book.douban.com/subject/1037290/)  
 [基地](https://book.douban.com/subject/1258490/)  
 
-### 生命从何而来？ 
+### 生命从何而来？  
+**人类，还是千万年前那只树上的猴子** 
 
 [物种起源](https://book.douban.com/subject/25745879/)  
 [自私的基因](https://book.douban.com/subject/11445548/)  
@@ -27,7 +29,8 @@ description: 開智正典
 [生命的壮阔](https://book.douban.com/subject/4137487/)  
 [魔鬼出没的世界](https://book.douban.com/subject/1310188/)
 
-### 如何认识你自己？
+### 如何认识你自己？  
+**21世纪，聪明人必须掌握的元概念是“理性”**
 
 [超越智商](https://book.douban.com/subject/26605978/)  
 [机器人叛乱](https://book.douban.com/subject/26412113/)  
@@ -62,3 +65,87 @@ description: 開智正典
 [对权威的服从](https://book.douban.com/subject/20477116/)  
 [亲密关系](https://book.douban.com/subject/5952488/)  
 [思维与决策](https://book.douban.com/subject/3542657/)
+
+### 世界万物，网络相连  
+**善用网络，给你一份走通互联网世界的地图**
+
+[复杂](https://book.douban.com/subject/1030898/)  
+[隐秩序](https://book.douban.com/subject/6797698/)  
+[失控](https://book.douban.com/subject/5375620/)  
+[大自然如何工作](https://book.douban.com/subject/1660174/)  
+[找工作](https://book.douban.com/subject/3312309/)  
+[结构洞](https://book.douban.com/subject/3291183/)  
+[创新的扩散](https://book.douban.com/subject/1460235/)  
+[六度分隔](https://book.douban.com/subject/6129181/)  
+[网络、群体与市场](https://book.douban.com/subject/6885949/)  
+[链接](https://book.douban.com/subject/24862722/)  
+[A New Kind of Science](https://book.douban.com/subject/1468622/)
+
+### 数学，思维的皇冠  
+**一切问题都是数学问题**
+
+[怎样解题](https://book.douban.com/subject/2124114/)  
+[统计数字会撒谎](https://book.douban.com/subject/3595095/)  
+[啊哈，灵机一动](https://book.douban.com/subject/2249354/)  
+[什么是数学](https://book.douban.com/subject/1320282/)  
+[普林斯顿数学指南](https://book.douban.com/subject/25817381/)  
+[大宇之形](https://book.douban.com/subject/20492316/)
+
+### 编程语言，21世纪的语言
+**编程，应该是你必须掌握的第二语言**
+
+[黑客与画家](https://book.douban.com/subject/6021440/)  
+[程序员的思维修炼](https://book.douban.com/subject/5372651/)  
+[信息简史](https://book.douban.com/subject/25752043/)  
+[软件随想录](https://book.douban.com/subject/4163938/)  
+[程序员修炼之道](https://book.douban.com/subject/5387402/)  
+[人月神话](https://book.douban.com/subject/2230248/)  
+[“笨办法”学Python](https://book.douban.com/subject/26264642/)
+
+### 找寻生命的真义  
+**诗歌与文学的意义在于无用**
+
+[追忆](https://book.douban.com/subject/1038492/)  
+[唐宋词十七讲](https://book.douban.com/subject/2005705/)  
+[马奇论管理](https://book.douban.com/subject/5920725/)  
+[风格的要素](https://book.douban.com/subject/1451400/)  
+[文章作法](https://book.douban.com/subject/2283714/)  
+[The Sense of Style](https://book.douban.com/subject/25846315/)  
+[翻译乃大道](https://book.douban.com/subject/26279084/)  
+[这就是纽约](https://book.douban.com/subject/1949417/)  
+[埃科谈文学](https://book.douban.com/subject/25889903/)  
+[一位年轻小说家的自白](https://book.douban.com/subject/25881360/)  
+[修辞认识](https://book.douban.com/subject/25843083/)  
+[《玩具屋》九讲](https://book.douban.com/subject/20453368/)  
+[红玫瑰与白玫瑰](https://book.douban.com/subject/10757939/)  
+[毛姆短篇小说精选集](https://book.douban.com/subject/10774752/)
+
+### 如何抵达星辰大海？  
+**在行动中找到信仰**
+
+[改变](https://book.douban.com/subject/3006742/)  
+[青年王阳明](https://book.douban.com/subject/24870782/)  
+[阳明学述要](https://book.douban.com/subject/6097211/)  
+[王阳明大传](https://book.douban.com/subject/26136989/)  
+[宗教与神话](https://book.douban.com/subject/1070236/)  
+[如何理解中国人](https://book.douban.com/subject/4100342/)  
+[中国人的心理](https://book.douban.com/subject/1771134/)  
+[人情与面子](https://book.douban.com/subject/5373043/)  
+[行动科学](https://book.douban.com/subject/11583939/)
+
+### 师从天才  
+**智者传记与人生建议**
+
+[我生活的种种模式](https://book.douban.com/subject/1065156/)  
+[致青年学者](https://book.douban.com/subject/4247329/)  
+[Letters to a Young Scientist](https://book.douban.com/subject/20019387/)  
+[反叛的科学家](https://book.douban.com/subject/24720345/)  
+[论对话](https://book.douban.com/subject/1310154/)  
+[穷查理宝典](https://book.douban.com/subject/10485011/)  
+[卓有成效的管理者](https://book.douban.com/subject/1322025/)  
+[形式综合论](https://book.douban.com/subject/4257314/)  
+[设计心理学](https://book.douban.com/subject/4606471/)  
+[创新者的窘境](https://book.douban.com/subject/25807982/)  
+[技术与文明](https://book.douban.com/subject/3815282/)  
+[奇特的一生](https://book.douban.com/subject/24739109/)  
+[如何把事情做到最好](https://book.douban.com/subject/25830853/)
