--- a/_posts/2016-7-1-前端概览.md
+++ b/_posts/2016-7-1-前端概览.md
@@ -2,7 +2,7 @@
 layout: post
 title: 前端概览
 categories: [blog ]
-tags: [NetEase-Front_end ]
+tags: [NetEase-Frontend ]
 description: 网易前端开发课概览
 ---
 
