--- a/_posts/2016-7-2-PS切图.md
+++ b/_posts/2016-7-2-PS切图.md
@@ -12,5 +12,91 @@ description: PS 切图
 
 ![](http://o7v1v0rr4.bkt.clouddn.com/%E4%BB%80%E4%B9%88%E6%98%AF%E5%88%87%E5%9B%BE.png)
 
+> why 切图？为了给网页提供素材~
+>   
+> * HTML: img ```<img src="images/avatar.jap" alt="头像">```
+> * CSS: background
+```
+.icon{
+    background-image: url(../images/sprite.png);
+    background-position: 0 0;
+}
+```
 
+### 如何切图
+
+* 使用 ps 工具
+* 使用背景图
+* 图片合并方案
+* 浏览器兼容
+
+#### 使用 ps 工具
+
+> ps 版本
+> 
+> * 03 年 Adobe Photoshop CS
+> * 13 年 Adobe Photoshop CC (CS6 是 CS 系列的最后一个版本）
+
+**基本设置和操作**
+
+* PS 首选项设置
+  - Photoshop CC > 首选项 > 单位与标尺 > 改为「像素」
+* 调整工作区以适合切图
+  - 「窗口」下开启：工具，选项，信息(F8)，图层(F7)，历史记录
+  - 把信息、图层和历史记录三个窗口，拖到右边栏
+  - 保存当前工作区 (窗口 > 工作区 > 新建）
+
+ ![](http://o7v1v0rr4.bkt.clouddn.com/ps%20%E5%B7%A5%E4%BD%9C%E5%8C%BA.png)
+
+* 切图要用到的工具
+  - 移动 (选择图层，移动图层）
+  - 矩形选框 (查看所选矩形框的信息）
+  - 魔棒 (切不规则的图形）
+  - 裁剪 & 切片
+  - 缩放 (缩放工具，command +/-，option + 滑动）
+  - 拾色器
+
+* 撤销操作
+  - ```command + z``` 切换上一次操作与当前操作
+  - ```command + option + z``` 连续撤销
+  - 在历史记录里选择
+
+* 辅助视图
+  - 视图 > 打开对齐，显示额外内容，标尺(command + r)> 显示 > 参考线(command + ;)
+
+**测量和取色**
+
+了解了 PS 切图的基本操作后，就要开始正式切图了。切图的第一步，获取设计稿中的信息。
+
+> 打开设计稿，获取信息
+> 
+> * 尺寸信息 → 测量 ```width: 200px;```
+> * 颜色信息 → 取色 ```color: #ffcc00;```
+
+* 测量
+  + 测量什么？(所有数字都要测量）
+     - 宽度，高度
+     - 内边距，外边距
+     - 边框
+     - 定位
+     - 文字大小
+     - 行高
+     - 背景图位置
+  + 测量工具
+     - 矩形选框工具 & 信息面板
+  + 选区
+     - 添加到选取：按住 shift
+     - 从选取减去：按住 option
+     - 与选区交叉：按住 shift + option
+
+* 取色
+  + 取啥色？(所有颜色都要取色)
+     - 边框色
+     - 背景色
+     - 文字色
+  + 取色工具
+     - 拾色器 & 吸管
+  + 小技巧
+     - 用 *拾色器* 确定背景是否是纯色
+     - 用 *魔棒* 确定是否是线性渐变
 
