--- a/_posts/2016-7-2-PS切图.md
+++ b/_posts/2016-7-2-PS切图.md
@@ -97,6 +97,53 @@ description: PS 切图
   + 取色工具
      - 拾色器 & 吸管
   + 小技巧
-     - 用 *拾色器* 确定背景是否是纯色
-     - 用 *魔棒* 确定是否是线性渐变
+     - 用**拾色器**确定背景是否是纯色
+     - 用**魔棒**确定是否是线性渐变
+
+**切图之前**
+
+* 哪些是需要切出来的
+  + 修饰性的 (一般用在 background 属性）
+     - 图标，logo
+     - 有特殊效果的按钮，文字等
+     - 非纯色的背景
+  + 内容性的 (一般用在 img 标签)
+     - Banner，广告图片
+     - 文章中的配图
+* 切出来的图片存为哪种类型？
+  + 修饰性的：PNG24，PNG8
+  + 内容性的：一般存为 JPG
+
+**切图的具体步骤**
+
+* 隐藏文字只留背景
+  + 若文字为独立图层，隐藏文字图层
+     - 找到文字图层
+     - 去掉眼睛图标
+  + 若文字和背景合并，平铺背景覆盖文字
+     - 矩形选框工具
+     - 自由变换 (command + T)
+     - 使用移动工具 + option (+shift)
+
+* 保存
+  + png24
+     - 移动工具选中所需图层 (按住 command 多选）
+     - 右键合并图层 (command + E)
+     - 再右键复制图层到新文件，或直接拖至已有文件 (command + N 新建）
+  + png8 (不支持半透明效果，带背景切）
+     - 合并(可见)图层 (shift + command + E)
+     - 矩形选框工具选择内容
+     - 魔棒去除多余部分 (按住 option)
+* 可平铺背景的切图
+  + 用矩形选框工具选取一块区域
+  + 复制粘贴到新文件中
+* 切片工具(适用于可以一刀切的活动页)
+  - 拉参考线
+  - 选择切片工具
+  - 点击「基于参考线的切片」按钮
+  - 保存 (全选切片，统一设置储存格式)
+
+      
+
+
 
