--- a/_posts/2016-7-2-PS切图.md
+++ b/_posts/2016-7-2-PS切图.md
@@ -143,6 +143,83 @@ description: PS 切图
   - 点击「基于参考线的切片」按钮
   - 保存 (全选切片，统一设置储存格式)
 
+**保存**
+
+切完图后，需要对我们切出来的内容进行保存。
+
+* 操作
+  * 复制(command + c)、新建(command + n)、粘贴(command + v) (or 拖动内容至新文件）
+  * 存储为 web 所用格式 (shift + option + command + s)
+* 格式
+  - 当图片色彩丰富且无透明要求时，保存为 JPG 格式并选择合适的品质
+  - 当图片色彩不太丰富时，无论有无透明要求，保存为 PNG8 格式
+  - 当图片有半透明要求时，保存为 PNG24 格式
+  - 为保证图片质量，保留一份 PSD，在 PSD 上进行修改
+
+**修改和维护**
+
+* 要继续放更多的图片？ → 更改画布大小 (图像 > 画布大小 > 选择宽高，定位左上角)
+* 移动图标
+  + 若图标为独立图层，用移动工具拖动即可
+  + 若图标为非独立图层
+     - 用选区工具选中图标区域
+     - 用移动工具拖动图标
+* 减小画布到指定区域
+
+#### 使用背景图
+
+切完图且保存后，下一步就是在代码中使用这些图片。
+
+![](http://o7v1v0rr4.bkt.clouddn.com/%E4%BD%BF%E7%94%A8%E8%83%8C%E6%99%AF%E5%9B%BE.png)
+
+#### 图片合并方案
+
+**为什么要拼图？**
+
+* 什么是 Sprite 拼图：
+
+  + 推荐阅读：[《谈谈CSS Sprites》](http://www.css88.com/archives/756)
+
+* Sprite 拼图好处
+  + 减少网络请求，提升网页加载速度
+
+**图片优化合并**
+
+* 大小与质量
+  + 平衡与取舍
+  + 压缩工具
+     - 无损 [Minimage](https://github.com/NetEaseWD/minimage)
+     - 有损 [TinyPng](https://tinypng.com/)
+* 合并
+  + 排列
+     - 图片之间必须保留空隙
+     
+     > 对于具体要保留多大的空隙呢，并没有一个明确的数值，遵循的一个宗旨就是保留的空隙足够后期维护就可以了。
+     >
+     > 如果是小图标，留的空隙可适当小一些，一般20像素左右；那如果是大图标，要留的空隙就要大一点，因为大图标在调整的时候，影响到的空间也会比较大。
+     >
+     > 有了一定的切图经验之后，对于保留多大空隙就会比较有概念，有自己的心得了。
+     
+     - 图片排列方式：横向 & 纵向
+  + 分类
+     - 同属于一个模块
+     - 大小相近
+     - 色彩相近
+     - 综合以上方式
+  + 合并推荐
+     - 只本页用到的图片合并
+     - 有状态的图标合并
+
+#### 浏览器兼容方案
+
+* IE6 不支持 PNG24 半透明
+  + 存两份：sprite.png → 24 ；sprite_ie.png → 8  
+
+* CSS3 & 切图
+
+    
+
+
       
 
 
