--- a/_posts/2016-8-1-layout.md
+++ b/_posts/2016-8-1-layout.md
@@ -106,8 +106,7 @@ li {
 
 **position**
 
-> position: static | relative | absolute | fixed
-> 
+> position: static \| relative \| absolute \| fixed
 
 * position: relative
   + 仍在文档流中
