--- a/_posts/2016-8-1-layout.md
+++ b/_posts/2016-8-1-layout.md
@@ -105,8 +105,8 @@ li {
 - 栈
 
 **position**
-
-> <pre> position: static | relative | absolute | fixed </pre>
+   
+> position: static &#124; relative &#124; absolute &#124; fixed
 
 * position: relative
   + 仍在文档流中
