--- a/_posts/2016-8-1-layout.md
+++ b/_posts/2016-8-1-layout.md
@@ -15,7 +15,7 @@ description: 布局
 ### display
 
 > 设置元素的显示方式（大小，位置）  
-> display: block &#124; inline &#124; inline-block &#124; none
+> display: block | inline | inline-block | none
 
 **display: block**
 
@@ -121,15 +121,15 @@ li {
      
      ![](http://o7v1v0rr4.bkt.clouddn.com/%E8%BD%AE%E6%92%AD%E5%A4%B4%E5%9B%BE%20demo.png)
      
-		```html
-		<div class="is">
-		  <img src="http://o7v1v0rr4.bkt.clouddn.com/%E8%BD%AE%E6%92%AD%E5%A4%B4%E5%9B%BE.jpg">
-		  <p class="title"><a href="#">老徐视线：北京潮女出门不穿内衣</a></p>
-		  <div class="controls">
-			<span></span><span class="cur"></span><span></span><span></span><span></span>
-		  </div>
-		</div>
-		```
+```html
+<div class="is">
+  <img src="http://o7v1v0rr4.bkt.clouddn.com/%E8%BD%AE%E6%92%AD%E5%A4%B4%E5%9B%BE.jpg">
+  <p class="title"><a href="#">老徐视线：北京潮女出门不穿内衣</a></p>
+  <div class="controls">
+	<span></span><span class="cur"></span><span></span><span></span><span></span>
+  </div>
+</div>
+```
      
 ```css
 .is {
