--- a/_posts/2016-8-1-layout.md
+++ b/_posts/2016-8-1-layout.md
@@ -15,7 +15,7 @@ description: 布局
 ### display
 
 > 设置元素的显示方式（大小，位置）  
-> display: block | inline | inline-block | none
+> display: block &#124; inline &#124; inline-block &#124; none
 
 **display: block**
 
@@ -96,7 +96,7 @@ li {
 **top/right/bottom/left**
 
 - 设置元素边缘距参照物边缘的距离
-- 一个定位元素，如果没有设置宽高，又同时设置了 top/right/bottom/left 值，元素会被「撑开」
+- 一个定位元素，如果没有设置宽高，又同时设置了 `top/right/bottom/left` 值，元素会被「撑开」
 
 **z-index**
 
@@ -117,9 +117,18 @@ li {
   + 默认宽度为内容宽度
   + 脱离文档流
   + 参照物为第一个定位 祖先/根 元素
-  + 应用 - 轮播头图
-     
-     ![](http://o7v1v0rr4.bkt.clouddn.com/%E8%BD%AE%E6%92%AD%E5%A4%B4%E5%9B%BE%20demo.png)
+
+
+* position: fixed
+  + 默认宽度为内容宽度
+  + 脱离文档流
+  + 参照物为视窗
+
+**应用**
+
+* 轮播头图
+  
+![](http://o7v1v0rr4.bkt.clouddn.com/%E8%BD%AE%E6%92%AD%E5%A4%B4%E5%9B%BE%20demo.png)
      
 ```html
 <div class="is">
@@ -151,5 +160,225 @@ li {
   width: 10px;
   height: 10px;
 }     
+```
+
+* 固定顶栏——图例 head 部分
+
+```html
+<body>
+  <div class="top">top bar</div>
+  <div class="main">main content area</div>
+</body>
+```
+
+```css
+body {
+  padding-top: 50px;
+}
+.top {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 50px;
+}
+```
+
+* 遮罩
+
+```html
+<div class="mask"></div>
+```
+
+```css
+.mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+}
+```
+
+* 三行自适应布局——图例 head & foot 固定，内容区自适应
+
+```html
+<div class="head">head</div>
+<div class="body">body</div>
+<div class="foot">foot</div>
+```
+
+```css
+.head {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+}
+/* 一个定位元素，如果没有设置宽高，又同时设置了 top/right/bottom/left 值，元素会被「撑开」*/
+.body {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  bottom: 100px;
+  right: 0;
+  overflow: auto;
+}
+.foot {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+}
+```
+
+### float
+
+> 图例中，内容区可分为主内容区和边栏，是为两列布局。那可以用`position: absolute` 来实现这种布局吗？由于设置了绝对定位的元素会脱离文档流，foot 部分会浮上来，与内容区重叠。为了实现两列布局，我们需要满足两点：1. 块级元素同行显示；2. 在文档流中。这时就用到了`float`属性。
+> 
+> float: left &#124; right &#124; none &#124; inherit
+
+**float**
+
+* 默认宽度为内容宽度
+* 半脱离文档流（对元素，脱离文档流；对内容，在文档流中）
+* 向指定方向一直移动
+* float 元素在同一文档流中
+
+**清除浮动**
+
+* clear
+	* clear: both &#124; left &#124; right &#124; &#124; none &#124; inherit
+	* 应用于后续元素
+	* 应用于块级元素
+
+```css
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
+}
+.clearfix {
+  zoom: 1;
+}
+```
+
+**应用**
+
+* 两列布局——图例内容区
+
+```html
+<div class="body clearfix">
+  <div class="side">side</div>
+  <div class="main">main</div>
+</div>
+```
+
+```css
+.side {
+  float: right;
+  width: 200px;
+}
+.main {
+  float: left;
+  width: 500px;
+}
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
+}
+```
+
+### Flex
+
+> Flex 布局教程：[语法篇](http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html) [实例篇](http://www.ruanyifeng.com/blog/2015/07/flex-examples.html)
+
+**创建 flex container**
+
+* display: flex
+
+**flex item**
+
+* 在 *文档流* 中的 *子* 元素
+
+**flex 属性**
+
+* 方向
+  - flex-direction
+     - flex-direction: row &#124; row-reverse &#124; column &#124; column-reverse
+  - flex-wrap
+     - flex-wrap: nowrap &#124; wrap &#124; wrap-reverse
+  - flex-flow
+     - flex-flow: <'flex-direction'> || <'flex-wrap'>
+  - order 
+     - order: \<interger>
+     - initial: 0
+* 弹性
+  - flex-basis
+     - flex-basis: main-size &#124; \<width>
+     - 设置 flex item 的初始宽/高
+  - flex-grow
+     - flex-grow: \<number>
+     - initial: 0
+  - flex-shrink
+     - flex-shrink: \<number>
+     - initial: 1
+  - flex
+     - flex: <'flex-grow'> || <'flex-shrink'> || <'flex-basis'>
+     - initial: 0 1 main-size
+* 对齐
+  - justify-content (like text-align)
+     - justify-content: flex-start &#124; flex-end &#124; center &#124; space-between &#124; space-around
+     - 设置 main-axis 方向上对齐方式
+  - align-items (like vertical-align)
+     - align-items: flex-start &#124; flex-end &#124; center &#124; baseline &#124; stretch
+     - 设置 cross-axis 方向上对齐方式
+  - align-self
+     - align-self: auto &#124; flex-start &#124; flex-end &#124; center &#124; baseline &#124; stretch
+     - 设置单个 flex item 在 cross-axis 方向上对齐方式
+  - align-content
+     - align-content: flex-start &#124; flex-end &#124; center &#124; space-between &#124; space-around &#124; stretch
+     - 设置 cross-axis 方向上行对齐方式
+
+**应用**
+
+* 三行自适应+两行自适应——图例
+
+```html
+<div class="head">head</div>
+<div class="body">
+  <div class="side">side</div>
+  <div class="main">main</div>
+</div>
+<div class="foot">foot</div>
+```
+
+```css
+body {
+  display: flex;
+  flex-flow: column;
+}
+.head, .foot {
+  height: 100px;
+}
+.body {
+  flex: 1;
+  display: flex;
+}
+.side {
+  width: 200px;
+}
+.main {
+  flex: 1
+}
 ```
 
