--- a/_posts/2016-8-1-layout.md
+++ b/_posts/2016-8-1-layout.md
@@ -318,7 +318,7 @@ body {
   - flex-wrap
      - flex-wrap: nowrap &#124; wrap &#124; wrap-reverse
   - flex-flow
-     - flex-flow: <'flex-direction'> || <'flex-wrap'>
+     - flex-flow: <'flex-direction'> &#124;&#124; <'flex-wrap'>
   - order 
      - order: \<interger>
      - initial: 0
@@ -333,7 +333,7 @@ body {
      - flex-shrink: \<number>
      - initial: 1
   - flex
-     - flex: <'flex-grow'> || <'flex-shrink'> || <'flex-basis'>
+     - flex: <'flex-grow'> &#124;&#124; <'flex-shrink'> &#124;&#124; <'flex-basis'>
      - initial: 0 1 main-size
 * 对齐
   - justify-content (like text-align)
